final fixes, added zapier to feedback form and some minor ones

--- a/crud/templates/web/guest/nova_hotel.html
+++ b/crud/templates/web/guest/nova_hotel.html
@@ -633,19 +633,19 @@
                   <h2 class="mb-2 text-sm font-semibold text-gray-900 uppercase dark:text-white">Follow us</h2>
                   <ul class="text-gray-500 dark:text-gray-400 font-medium space-y-2">
                     <li>
-                      <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-7">
+                      <a href="#" class="text-gray-500 hover:text-gray-900 cursor-pointer dark:hover:text-white ms-7">
                         <i class="fa-brands fa-square-facebook text-2xl"></i>
                         <span class="sr-only">Facebook page</span>
                       </a>
                     </li>
                     <li>
-                      <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-7">
+                      <a href="#" class="text-gray-500 hover:text-gray-900 cursor-pointer dark:hover:text-white ms-7">
                         <i class="fa-brands fa-square-instagram text-2xl"></i>
                         <span class="sr-only">Instagram</span>
                       </a>
                     </li>
                     <li>
-                      <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-7">
+                      <a href="#" class="text-gray-500 hover:text-gray-900 cursor-pointer dark:hover:text-white ms-7">
                         <i class="fa-brands fa-x-twitter text-2xl"></i>
                         <span class="sr-only">X</span>
                       </a>
