--- a/crud/templates/web/guest/nova_hotel.html
+++ b/crud/templates/web/guest/nova_hotel.html
@@ -59,7 +59,7 @@
 
 <div class="relative w-full h-auto">
   {% comment %} home section {% endcomment %}
-  <img src="{{ MEDIA_URL }}unsplash-img.jpg" alt="landing_img.jpg" class="w-full aspect-[14/6] object-cover"/>
+  <img src="{{ MEDIA_URL }}unsplash-img.jpg" alt="landing_img.jpg" class="w-full md:aspect-[14/6] object-cover"/>
   <!-- Transparent color overlay -->
   <div id="home" class="absolute inset-0 bg-orange-400/50 backdrop-blur-xs">
     <div class="flex flex-col my-auto h-full px-4 md:px-24 items-center md:items-start justify-center h-full text-white text-center md:text-left">
